--- a/nvm/dot.yaml
+++ b/nvm/dot.yaml
@@ -1,3 +1,5 @@
 darwin|linux:
+  depends:
+    - zsh
   installs:
     cmd: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.0/install.sh | bash
