fix: fzf dependency

--- a/zsh/dot.yaml
+++ b/zsh/dot.yaml
@@ -9,5 +9,6 @@ darwin:
     cmd: brew install zsh && sudo chsh -s $(which zsh)
   depends:
     - homebrew
+    - fzf
   links:
     .zshrc: ~/.zshrc
