--- a/fd/dot.yaml
+++ b/fd/dot.yaml
@@ -1,6 +1,3 @@
-depends:
-  - homebrew
-
 linux:
   install:
-    cmd: sudo apt install fd-find -y # see https://github.com/sharkdp/fd?tab=readme-ov-file#on-ubuntu
+    cmd: sudo apt install fd-find -y && ln -s $(which fdfind) ~/.local/bin/fd # see https://github.com/sharkdp/fd?tab=readme-ov-file#on-ubuntu
