feat: finish setting up

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 	p = push
 	fp = fetch --prune --all
 	l = log --pretty='format:%C(yellow) %h %C(green) %<(18,trunc)%cn %C(magenta)%<(14,trunc)%cr %C(default)%s'
-	rsync = reset --hard @{u} # hard reset to current upstream branch
+	rh = reset --hard @{u} # hard reset to current upstream branch
 	fixup = "!git log -n 50 --pretty=format:'%h %s' --no-merges | fzf | cut -c -7 | xargs -o git commit --fixup" # interactively select fixup
 	upstash = "!git stash && git pull && git stash pop" # update current branch with temp stash
 	update = "!git fetch && git rebase --autostash FETCH_HEAD"
