feat: update git squash alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
   upstash = "!git stash && git pull && git stash pop" # update current branch with temp stash
   update = "!git fetch && git rebase --autostash FETCH_HEAD"
   up = "!git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD)"
-  squash = rebase -i master
+  squash = rebase -i @{u}
 [core]
   editor = nvim
 [init]
