style: move alias section down

--- a/.gitconfig
+++ b/.gitconfig
@@ -41,3 +41,16 @@
   prune = true
 [blame]
   date = relative
+[alias]
+  a = add
+  c = commit -m
+  s = status
+  p = push
+  pf = push --force
+  l = log --pretty='format:%C(green) %<(20,trunc)%cn %C(magenta)%<(20,trunc)%ch %C(yellow) %h %C(reset)%<(72,trunc)%s'
+  rh = reset --hard @{u} # hard reset to current upstream branch
+  fixup = "!git log -n 50 --pretty=format:'%h %s' --no-merges | fzf | cut -c -7 | xargs -o git commit --fixup" # interactively select fixup
+  upstash = "!git stash && git pull && git stash pop" # update current branch with temp stash
+  update = "!git fetch && git rebase --autostash FETCH_HEAD"
+  up = "!git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD)"
+  squash = rebase -i @{u}
