--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ~/.tmux.conf 
+bind r source-file ~/.config/tmux/tmux.conf 
 
 set -g prefix C-a
 set -g mouse on
@@ -10,17 +10,20 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# run ~/.tmux/plugins/tmux/catppuccin.tmux
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_status_background "none" # make status bar transparent
+
 set -g status-right-length 50
 set -g status-right ''
 set -ag status-right "#{E:@catppuccin_status_application}"
 set -g status-position top
 
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-run ~/.tmux/plugins/tmux/catppuccin.tmux
-
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -ogq @catppuccin_window_text " #W"
+set -ogq @catppuccin_window_current_text " #W"
 
 bind C-h select-pane -L
 bind C-j select-pane -D
