feat: add tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,11 +3,18 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-a
 set -g mouse on
+set -g escape-time 0
 set -g default-terminal "tmux-256color"
+set -sg terminal-overrides ",*:RGB"
 set -g allow-rename off # prevent tmux from renaming windows after command executed
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
+set -g pane-border-lines simple
+set -g pane-border-style fg=black,bright
+set -g pane-active-border-style fg=magenta
+set -g repeat-time 1000
+set -g history-limit 10000
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -25,28 +32,20 @@ set -g status-position top
 set -ogq @catppuccin_window_text " #W"
 set -ogq @catppuccin_window_current_text " #W"
 
-bind C-h select-pane -L
-bind C-j select-pane -D
-bind C-k select-pane -U 
-bind C-l select-pane -R
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 bind v split-window -h
-bind s split-window 
+bind - split-window 
 unbind '"'
 unbind %
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
+bind f resize-pane -Z
 
-bind d confirm-before -p "kill pane? (y/n)" kill-pane
-bind x confirm-before -p "kill window? (y/n)" kill-window
+bind q confirm-before -p "kill pane? (y/n)" kill-pane
+bind Q confirm-before -p "kill window? (y/n)" kill-window
 bind c command-prompt -p "window name:" "new-window -c '#{pane_current_path}'; rename-window '%%'" 
-
-# select next pane
+bind d display-panes
 bind C-a select-pane -t :.+
+# window nav default: n, p for next and previous
 
 # keep this at the bottom
 run '~/.tmux/plugins/tpm/tpm'
