--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g allow-rename off # prevent tmux from renaming windows after command execu
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
-set -g pane-border-lines simple
+set -g pane-border-lines single
 set -g pane-border-style fg=black,bright
 set -g pane-active-border-style fg=magenta
 set -g repeat-time 1000
@@ -34,13 +34,14 @@ set -ogq @catppuccin_window_text " #W"
 set -ogq @catppuccin_window_current_text " #W"
 
 bind v split-window -h
-bind - split-window 
+bind s split-window 
 unbind '"'
 unbind %
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
 bind f resize-pane -Z
 
+unbind x
 bind q confirm-before -p "kill pane? (y/n)" kill-pane
 bind Q confirm-before -p "kill window? (y/n)" kill-window
 bind c command-prompt -p "window name:" "new-window -c '#{pane_current_path}'; rename-window '%%'" 
