--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,6 +27,7 @@ set -g @catppuccin_status_background "none" # make status bar transparent
 
 set -g status-right-length 50
 set -g status-right ''
+set -g status-left ''
 set -ag status-right "#{E:@catppuccin_status_application}"
 set -g status-position top
 
