--- a/.gitconfig
+++ b/.gitconfig
@@ -77,5 +77,5 @@
 
 [url "git@github.com:"]
     insteadOf = "gh:"
-[url "git@bitbucket.lab.dynatrace.org"]
+[url "git@bitbucket.lab.dynatrace.org:"]
     insteadOf = "dt:"
