--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,8 @@
 
 [core]
   editor = nvim
+  fsmonitor = true
+  untrackedCache = true
 
 [init]
   defaultBranch = main
@@ -54,14 +56,15 @@
 [branch]
   sort = -committerdate
 
-[fetch]
-  prune = true
-
 [blame]
   coloring = highlightRecent
   date = relative
 
+[feature]
+  manyFiles = true
+
 [alias]
+  ss = switch -
   a = add
   c = commit -m
   s = status
